Fix new file structure and color linking changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Mental Health Chatbot</title>
+    <title>Cognia-AI Mental Health Chatbot</title>
     <!-- Link to the CSS file -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="./../static/style.css">
 </head>
 <body>
     <div class="heading">
-        <h1>Meya.ai</h1>
-        <p>Your personal assistant for all your queries!</p>
+        <h1>Cognia-AI</h1>
+        <p>Your Personal Mental Health Assistant!</p>
     </div>
     <div class="chat-container">
         <!-- Chatbox where messages will be displayed -->
@@ -23,6 +23,6 @@
     </div>
 
     <!-- Link to the JavaScript file -->
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="./../static/script.js"></script>
 </body>
 </html>
